--- a/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.WebApp/projects/family-calendar-event-planner-admin/src/app/app.html
+++ b/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.WebApp/projects/family-calendar-event-planner-admin/src/app/app.html
@@ -15,17 +15,13 @@
       <a mat-list-item routerLink="/households" routerLinkActive="active">
         <mat-icon matListItemIcon>home</mat-icon>
         <span matListItemTitle>Households</span>
-<<<<<<< Updated upstream
       </a>
-      <a mat-list-item routerLink="/settings" routerLinkActive="active">
-        <mat-icon matListItemIcon>settings</mat-icon>
-        <span matListItemTitle>Settings</span>
-=======
->>>>>>> Stashed changes
-      </a>
+      <a mat-list-item routerLink="/events" routerLinkActive="active">
+        <mat-icon matListItemIcon>event</mat-icon>
+        <span matListItemTitle>Events</span>
+      </a>      
     </mat-nav-list>
   </mat-sidenav>
-
   <mat-sidenav-content>
     <mat-toolbar color="primary" class="toolbar">
       <button
