--- a/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.WebApp/projects/family-calendar-event-planner-admin/src/app/layouts/main-layout.component.html
+++ b/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.WebApp/projects/family-calendar-event-planner-admin/src/app/layouts/main-layout.component.html
@@ -6,7 +6,7 @@
     [attr.role]="(isLargeScreen$ | async) ? 'navigation' : 'dialog'"
     [mode]="(isLargeScreen$ | async) ? 'side' : 'over'"
     [opened]="(isLargeScreen$ | async) ?? false">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-toolbar color="primary"></mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/family-members" routerLinkActive="active">
         <mat-icon matListItemIcon>family_restroom</mat-icon>
