--- a/GroceryShoppingListApp/src/GroceryShoppingListApp.WebApp/projects/grocery-shopping-list-app/src/app/pages/list-detail/list-detail.html
+++ b/GroceryShoppingListApp/src/GroceryShoppingListApp.WebApp/projects/grocery-shopping-list-app/src/app/pages/list-detail/list-detail.html
@@ -26,7 +26,7 @@
       <div class="list-detail__progress">
         @if (vm.items.length > 0) {
           <span>
-            {{ (vm.items | slice:0:vm.items.length).filter(i => i.isChecked).length }} of {{ vm.items.length }} items completed
+            {{ vm.completedCount }} of {{ vm.items.length }} items completed
           </span>
         }
       </div>
