--- a/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.WebApp/projects/family-calendar-event-planner-admin/src/styles.scss
+++ b/FamilyCalendarEventPlanner/src/FamilyCalendarEventPlanner.WebApp/projects/family-calendar-event-planner-admin/src/styles.scss
@@ -1,6 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '@angular/material' as mat;
 
+ 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+
+  height: 100%;
+
+  margin: 0;
+
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+}
+
+ 
+
+@include mat.core();
+
+ 
+
+$theme: mat.define-theme((
+
+  color: (
+
+    theme-type: light,
+
+    primary: mat.$azure-palette,
+
+    tertiary: mat.$blue-palette
+
+  )
+
+));
+
