--- a/DateNightIdeaGenerator/src/DateNightIdeaGenerator.WebApp/projects/date-night-idea-generator/src/styles.scss
+++ b/DateNightIdeaGenerator/src/DateNightIdeaGenerator.WebApp/projects/date-night-idea-generator/src/styles.scss
@@ -4,21 +4,22 @@
 
 @include mat.core();
 
-$date-night-primary: mat.define-palette(mat.$indigo-palette);
-$date-night-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$date-night-warn: mat.define-palette(mat.$red-palette);
+$date-night-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$date-night-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
+$date-night-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$date-night-theme: mat.define-light-theme((
+$date-night-theme: mat.m2-define-light-theme((
   color: (
     primary: $date-night-primary,
     accent: $date-night-accent,
     warn: $date-night-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: mat.m2-define-typography-config(),
   density: 0,
 ));
 
 @include mat.all-component-themes($date-night-theme);
+@include mat.core-theme($date-night-theme);
 
 * {
   box-sizing: border-box;
