--- a/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/layouts/main-layout/main-layout.component.scss
+++ b/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/layouts/main-layout/main-layout.component.scss
@@ -1,11 +1,13 @@
+@use '../../../styles/tokens' as *;
+
 .app__container {
-  min-height: calc(100vh - 64px);
+  min-height: calc(100vh - $header-height);
 }
 
 .app__sidenav {
-  width: 250px;
+  width: $sidebar-width;
   border-right: 1px solid rgba(0, 0, 0, 0.12);
-  padding: 1rem;
+  padding: $sidebar-padding;
 }
 
 .app__content {
@@ -13,6 +15,6 @@
 }
 
 .app__main {
-  padding: 2rem;
+  padding: $space-page-padding;
   min-height: 100%;
 }
