--- a/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/components/header/header.component.scss
+++ b/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/tokens' as *;
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -11,7 +13,7 @@
 
 .header__nav {
   display: flex;
-  gap: 0.5rem;
+  gap: $space-element-gap-sm;
 }
 
 .header__nav-link {
@@ -28,7 +30,7 @@
 
 .header__user {
   color: white;
-  margin-right: 1rem;
+  margin-right: $space-element-gap;
   font-weight: 500;
 }
 
