--- a/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/pages/contacts-list/contacts-list.component.scss
+++ b/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/pages/contacts-list/contacts-list.component.scss
@@ -1,12 +1,14 @@
+@use '../../../styles/tokens' as *;
+
 .contacts-list {
-  padding: 2rem;
+  padding: $space-page-padding;
 }
 
 .contacts-list__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: $space-header-margin;
 }
 
 .contacts-list__title {
@@ -16,11 +18,12 @@
 .contacts-list__add-btn {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: $space-element-gap-sm;
 }
 
 .contacts-list__card {
   overflow-x: auto;
+  padding: $space-card-padding;
 }
 
 .contacts-list__table {
