--- a/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/components/sidebar/sidebar.component.scss
+++ b/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,13 @@
 @use '../../../styles/tokens' as *;
 
 .sidebar {
-  padding: 0;
+  // Mobile: Add padding when in mobile drawer mode
+  padding: $sidebar-padding;
+  
+  // Desktop: No padding (provided by layout)
+  @media (min-width: $breakpoint-desktop) {
+    padding: 0;
+  }
 
   &__item {
     margin-bottom: $sidebar-item-gap;
