--- a/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/layouts/main-layout/main-layout.component.html
+++ b/ProfessionalNetworkCRM/src/ProfessionalNetworkCRM.WebApp/projects/professional-network-crm/src/app/layouts/main-layout/main-layout.component.html
@@ -1,8 +1,14 @@
 <app-header></app-header>
 <mat-sidenav-container class="app__container">
-  <mat-sidenav mode="side" opened class="app__sidenav">
+  <mat-sidenav 
+    #sidenav
+    [mode]="sidenavMode" 
+    [opened]="sidenavOpened"
+    class="app__sidenav"
+    [class.app__sidenav--mobile]="isMobile">
     <app-sidebar></app-sidebar>
   </mat-sidenav>
+  
   <mat-sidenav-content class="app__content">
     <main class="app__main">
       <router-outlet></router-outlet>
